# outreachpass

./: .gitignore  AMPLIFY_DEPLOYMENT_NOTES.md  API_DOCUMENTATION.md  API_EXAMPLES.md  CLAUDE.md  DEPLOYMENT_NOTES.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DOMAIN_CONFIG.md  DOMAIN_UPDATE_SUMMARY.md  FRONTEND_AUTH_FIX.md  FRONTEND_DEPLOYMENT_GUIDE.md  Makefile  POETRY_SETUP.md  QUICKSTART.md  QUICK_START.md  README.md  SECURITY_DEPLOYMENT_NOV13.md  SETUP_COMPLETE.md  TECHNICAL_DEBT_CLEANUP_REPORT.md  TECHNICAL_DEBT_SUMMARY.md  amplify.yml  outreachpass-1f20a78a7e5b.json  pyproject.toml  zijX9ozY
.playwright-mcp/: attendees-template.csv  tech-summit-2025-attendees.csv
.serena/: project.yml
backend/: .env.example  generate_pass_test.py  google_button_base64.txt  pytest.ini  requirements.txt  test_analytics_demo.py  worker.py
build 2/: requirements.txt
claudedocs/: AWS_ARCHITECTURE.md  FEATURES_GUIDE.md  GOOGLE_WALLET_DIAGNOSIS.md  SERVERLESS_ARCHITECTURE_DESIGN.md  SYSTEM_ARCHITECTURE.md  USER_GUIDE.md  brand-wallet-customization.md  cloudwatch-insights-queries.md  cost-optimization-applied.md  cost-optimization-verification.md  performance-baselines.md  production-deployment.md  production-test-results.md
database/: 001_initial_schema.sql  002_pass_generation_jobs.sql  003_analytics_tracking.sql
docs/: ANALYTICS_IMPLEMENTATION_SUMMARY.md  ANALYTICS_TESTING_GUIDE.md  AWS_INFRASTRUCTURE_INVENTORY.md  CICD_IMPLEMENTATION_SUMMARY.md  CICD_SETUP_INSTRUCTIONS.md  DEPLOYMENT_SUMMARY.md  branch-protection-setup.md  cicd-architecture.md  secrets-management.md  terraform-state-migration.md
frontend-outreachpass/: .dockerignore  .env.example  .env.local.example  .env.production  DEPLOYMENT.md  Dockerfile  Dockerfile.light  Dockerfile.simple  README.md  TESTING_CHECKLIST.md  amplify.yml  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
lambda-email-forwarder/: index.py
lambda-worker-build/: requirements.txt  worker.py
scripts/: build_lambda.sh  build_lambda_combined.sh  build_worker_lambda.sh  create_eventbridge_rule.sh  deploy-frontend.sh  deploy.sh  deploy_worker_lambda.sh  deploy_worker_via_s3.sh  dev_server.sh  format.sh  lint.sh  test.sh  (+8 more)
(+177 files in other folders)
